# fork-web-app

./: .clang-format  .clang-tidy  .cppcheck  .editorconfig  .env  .env.me  .env.previous  .env.vault  .gitattributes  .gitconfig  .gitignore  .indent.pro  .linthtmlrc  .markdown.json  .markdownlint.json  .prettierrc  .shellcheckrc  .splintrc  ACKNOWLEDGEMENT.html  ACKNOWLEDGEMENT.md  AUTHORS  AUTHORS.html  AUTHORS.md  Automate_issues.yml  CHANGELOG  CHANGELOG.html  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  COPYING  ChangeLog  Containerfile  Doxyfile  INSTALL  LICENSE  MOINTORING_AND_EVALUATION.html  MONITORING_AND_EVALUATION  (+23 more)
.devcontainer/: Containerfile  devcontainer.json
.github/: CODEOWNERS  CODEOWNERS.html  ISSUE_TEMPLATE.html  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.html  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: CI-CD-Pipeline.yml
autom4te.cache/: output.0  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
config/env/: .env
docs/: CONTACT.html  CONTACT.md  CONTRIBUTORS.html  CONTRIBUTORS.md  FAQ.html  FAQ.md  INSTALL.html  INSTALL.md  Makefile.in  TROUBLESHOOTING.md  USAGE.md  app.1  my_program.1
etc/: Makefile.in  auth.passwd  config.conf  config.ini
etc/auth/: passwd
etc/config/: .env
etc/env/: .env
etc/server/: auth.passwd
etc/ssl/: cert.pem  privkey.pem
include/: Makefile.in  app_error.h  atomic_ops.h  audit.h  audit_events.h  auth.h  cache.h  common.h  compat.h  compat_layer.h  compat_types.h  config.h  config_loader.h  constants.h  csv_utils.h  data_structures.h  database.h  env.h  env_loader.h  error_codes.h  error_handler.h  external_includes.h  fs.h  garbage_collector.h  hello.h  http.h  http_parser.h  http_response.h  init.h  logger.h  logging.h  mem.h  net.h  process.h  project.h  quic_module.h  rec_utils.h  records.h  scheduler.h  server.h  (+12 more)
lib/: Makefile  Makefile.in
m4/: Makefile  Makefile.in
make/: Makefile.common  Makefile.dev  Makefile.prod
objects/: Makefile  Makefile.in
po/: Makefile  Makefile.in
scripts/setup/: dev.sh  prod.sh
src/: add_custom_uint64.s  app_error.c  atomic_ops.c  audit.c  audit_events.c  auth.c  cache.c  compat.c  compatStrtol64_asm.s  compat_layer.c  config.c  config_loader.c  constants.c  csv_utils.c  data_structures.c  database.c  div_custom_uint64.s  env.c  env_loader.c  error_handler.c  fs.c  garbage_collector.c  hello.c  http.c  http_parser.c  http_response.c  init.c  logger.c  logging.c  main.c  mem.c  net.c  process.c  quic_module.c  rec_utils.c  records.c  scheduler.c  server.c  session.c  sha256_asm.c  (+9 more)
static/: dashboard.html  index.html  profile.html
test/: auth.passwd  test.rec  test_app_error.c  test_cache.c  test_config.c  test_consistency.c  test_constants.c  test_env.c  test_fs.c  test_index.html  test_init.c  test_logging.c  test_main.c  test_main_module.c  test_mem.c  test_process.c  test_runner.c  test_scheduler.c  test_setup.c  test_setup.h  test_shell.c  test_socket.c  test_suite.h  test_suites.h  test_web_server.c  test_web_server_security.c  w6946.rec
tests/: Makefile  test_config_loader.c  test_constants.c  test_csv_utils.c  test_data_structures.c  test_env_loader.c  test_error_handler.c  test_garbage_collector.c  test_logger.c  test_main.c  test_rec_utils.c  test_records.c  test_socket_module.c  test_utils.c  test_validator.c
tmp/: .gitkeep  Makefile  Makefile.in  http.pseudo
var/db/: ms1180.rec  w6946.rec
var/lib/: database.descr  records.rec
var/records/: obligation_number.txt  schema.desc  scjv.rec  test.rec  w6946.rec
var/www/html/: index.html
www/: audit.html  charts.html  crud_ms1180.html  crud_profile.html  crud_scjv.html  crud_w6946.html  dashboard.html  index.html  ms1180.html  profile.html  scjv.html  w6946.html
